# spectra

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
Formula/: spectra.rb
macos/: ScreenCapture.swift
scripts/: release.sh
src/: audio.rs  dsp.rs  main.rs  screencap.rs  styles.rs
